--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Created by https://www.toptal.com/developers/gitignore/api/pycharm,macos,venv
 # Edit at https://www.toptal.com/developers/gitignore?templates=pycharm,macos,venv
+venv
 .idea
 __pycache__/
 ### macOS ###
